plugins {
    id 'java'
    id 'application'
    id 'com.google.cloud.tools.jib' version '3.1.3'
    id "com.diffplug.spotless" version "5.14.2"
}

group 'gg.discord.tj'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

application {
      mainClass = 'gg.discord.tj.bot.app.Application'
      applicationDefaultJvmArgs = ['--enable-preview',
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                                   "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
      ]
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

jib {
    from.image = 'adoptopenjdk/openjdk16:alpine-slim'
    to.image = 'togetherjava/tjbot:1.0'
    container {
        jvmFlags = ["--enable-preview",
                    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                    "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                    "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                    "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                    "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
        ]
        volumes = ["/var/tjbot"]
    }
}

spotless {
    java {
        googleJavaFormat("1.10.0").aosp()
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'

    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    implementation 'com.discord4j:discord4j-core:3.1.7'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.1'
    implementation 'com.google.googlejavaformat:google-java-format:1.10.0'
    implementation 'com.github.freva:ascii-table:1.2.0'
    implementation 'ch.qos.logback:logback-core:1.2.5'
    implementation 'org.slf4j:slf4j-api:1.7.32'

    runtimeOnly 'ch.qos.logback:logback-classic:1.2.5'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}

test {
    useJUnitPlatform()
}
